cabal-version: 2.4
name:          chadchat
version:       0.1.0.0
category:      Chat
license:       MIT
license-file:  LICENSE
author:        Mark Stein
maintainer:    shadowninja1050@gmail.com
synopsis:      TUI chat client and server 
description:
  A TUI chat client implemented with <https://hackage.haskell.org/package/brick brick>, as well as a server for hosting chatrooms 

homepage:      https://github.com/shadowninja55/chadchat

source-repository head
  type:     git
  location: https://github.com/shadowninja55/chadchat

common base
  build-depends:
    , base         >=4 && <5
    , bytestring   
    , io-streams  
    , serialise  
    , tcp-streams
    , text        
    , utf8-string 

  default-language:   GHC2021
  default-extensions:
    NoStarIsType
    BlockArguments
    LambdaCase
    OverloadedStrings
    LexicalNegation
    NoFieldSelectors
    OverloadedRecordDot

  ghc-options:        -Wall

library
  import:          base
  hs-source-dirs:  src
  exposed-modules: ChadChat.Message

executable client
  import:         base
  main-is:        Client.hs
  hs-source-dirs: app
  build-depends:
    , brick 
    , chadchat
    , generic-lens  
    , lens      
    , text-zipper
    , unix        
    , vty

  ghc-options:    -threaded

executable server
  import:         base
  main-is:        Server.hs
  hs-source-dirs: app
  build-depends:
    , chadchat
    , logging 
    , network
